syntax = "proto3";
package helloworld;

option go_package = "protob";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string name = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}
